# FluentFlyout

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  FluentFlyout.sln  LICENSE  PRIVACY-POLICY.md  README.fr.md  README.kr.md  README.md  README.nl.md  README.ru.md  README.tr.md  README.zh.md
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/build-files/: FluentFlyout_Installer.bat  README.txt
.github/workflows/: build-msix.yml  codeql.yml  dotnet-format.yml  notify-website.yml  stale.yml  static.yml
FluentFlyout.SourceGenerators/: FluentFlyout.SourceGenerators.csproj  SearchItemsGenerator.cs
FluentFlyout.Tests/: BoolToVisibleCollapsedConverterTests.cs  FluentFlyout.Tests.csproj
FluentFlyoutMSIX/: FluentFlyoutMSIX.wapproj  Package.appxmanifest
FluentFlyoutWPF/: .editorconfig  App.config  App.xaml  App.xaml.cs  AssemblyInfo.cs  FluentFlyout.csproj  FluentFlyoutWPF.csproj  MainWindow.xaml  MainWindow.xaml.cs  NLog.config  NextUpWindow.xaml  NextUpWindow.xaml.cs  OnboardingWindow.xaml  OnboardingWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest
FluentFlyoutWPF.Tests/: FluentFlyoutWPF.Tests.csproj  Program.cs
FluentFlyoutWPF/Classes/: AudioDeviceMonitor.cs  AutoUpdater.cs  BoolToEnabledDisabledConverter.cs  FullscreenDetector.cs  (+16 more)
Website/: index.html  output.css  script.js  sitemap.xml  styles.css
fluent_flyout_core/: Cargo.toml
fluent_flyout_core/src/: lib.rs
(+127 files in other folders)
